force-app/main/default/objects/FEC_Sales_Logic__c/FEC_Sales_Logic__c.object-meta.xml
<CustomObject>
    <description>Object lưu logic lấy giá trị trường Sales Channel và Sales Sub Channel</description>
    <label>Sales Logic</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Sales Logic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Logic</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>