force-app/main/default/objects/FEC_Sales_Logic__c/fields/FEC_CC_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_CC_Code__c</fullName>
    <label>CC Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>KI</fullName>
            </value>
            <value>
                <fullName>KS</fullName>
            </value>
            <value>
                <fullName>KFE</fullName>
            </value>
            <value>
                <fullName>KP</fullName>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>ZP</fullName>
            </value>
            <value>
                <fullName>HS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>