force-app/main/default/objects/FEC_Sales_Logic__c/fields/FEC_DSA_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_DSA_Code__c</fullName>
    <label>DSA Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>CSD</fullName>
            </value>
            <value>
                <fullName>MW</fullName>
            </value>
            <value>
                <fullName>RB</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>DMH</fullName>
            </value>
            <value>
                <fullName>DMD</fullName>
            </value>
            <value>
                <fullName>DMC</fullName>
            </value>
            <value>
                <fullName>TTU</fullName>
            </value>
            <value>
                <fullName>DG</fullName>
            </value>
            <value>
                <fullName>CCT</fullName>
            </value>
            <value>
                <fullName>SGO</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
            <value>
                <fullName>TP</fullName>
            </value>
            <value>
                <fullName>KP</fullName>
            </value>
            <value>
                <fullName>SN</fullName>
            </value>
            <value>
                <fullName>KF</fullName>
            </value>
            <value>
                <fullName>KS</fullName>
            </value>
            <value>
                <fullName>KFE</fullName>
            </value>
            <value>
                <fullName>SM</fullName>
            </value>
            <value>
                <fullName>DSA</fullName>
            </value>
            <value>
                <fullName>DA</fullName>
            </value>
            <value>
                <fullName>DSAT</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>DSP</fullName>
            </value>
            <value>
                <fullName>KV</fullName>
            </value>
            <value>
                <fullName>VN</fullName>
            </value>
            <value>
                <fullName>DPC</fullName>
            </value>
            <value>
                <fullName>TSAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>