force-app/main/default/objects/FEC_Sales_Logic__c/fields/FEC_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>THIRD PARTY</fullName>
            </value>
            <value>
                <fullName>DS_IH</fullName>
            </value>
            <value>
                <fullName>P@W</fullName>
            </value>
            <value>
                <fullName>VNPOST</fullName>
            </value>
            <value>
                <fullName>XS_IH</fullName>
            </value>
            <value>
                <fullName>LG_IH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>