force-app/main/default/objects/FEC_Sales_Logic__c/fields/FEC_Sales_Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sales_Sub_Channel__c</fullName>
    <label>Sales Sub Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS_CC</fullName>
            </value>
            <value>
                <fullName>SMARTNET_KIOSK</fullName>
            </value>
            <value>
                <fullName>SMARTNET_TELEX</fullName>
            </value>
            <value>
                <fullName>SALESMAN</fullName>
            </value>
            <value>
                <fullName>DIAMONDSTAR</fullName>
            </value>
            <value>
                <fullName>THIENTU</fullName>
            </value>
            <value>
                <fullName>DIGITEL</fullName>
            </value>
            <value>
                <fullName>CONCENTRIX</fullName>
            </value>
            <value>
                <fullName>SAIGONBPO</fullName>
            </value>
            <value>
                <fullName>CALLUS</fullName>
            </value>
            <value>
                <fullName>THINHPHAT</fullName>
            </value>
            <value>
                <fullName>DSA</fullName>
            </value>
            <value>
                <fullName>COURIER</fullName>
            </value>
            <value>
                <fullName>P@W</fullName>
            </value>
            <value>
                <fullName>VNPOST</fullName>
            </value>
            <value>
                <fullName>XSELL_CRC</fullName>
            </value>
            <value>
                <fullName>XSELL_PL</fullName>
            </value>
            <value>
                <fullName>LG_NTB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>