force-app/main/default/objects/FEC_Sales_Logic__c/fields/FEC_Sequence__c.field-meta.xml
<CustomField>
    <fullName>FEC_Sequence__c</fullName>
    <description>STT ưu tiên trên bảng II (1-35). Số nhỏ được xét trước.</description>
    <label>Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>